# qTuner

./: CMakeLists.txt  README.md  qTuner.pro
resources/: aboutText.html  arrow.xcf  qTuner-large.xcf  qTuner.qrc  qTuner.rc  qTuner.xcf  tunings.conf
src/: CMakeLists.txt  FFTDevice.cpp  FFTDevice.hpp  NoteInfo.cpp  NoteInfo.hpp  OutputDevice.cpp  OutputDevice.hpp  Tuning.cpp  Tuning.hpp  UIMain.cpp  UIMain.hpp  UIMain.ui  config.hpp.in  main.cpp  winMath.cpp  winMath.hpp
